Okay overflow was still wonky for some edge cases. Fixed it now.
See css property for the ".divs" class. Fackin 'ell bruv

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 *{
     box-sizing: border-box;
     margin: 0%;
-    padding: 0%;
+    padding: 0%
+    ;
 }
 
 
@@ -57,3 +58,8 @@
   
 }
 
+
+.divs {
+
+margin-top: -0.01px;
+}
